--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Famms Fashion Bootstrap</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
  
     <!-- <link rel="stylesheet" href="bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"> -->
 </head>
@@ -283,6 +284,20 @@
     </div>
 
     <!-- Gallery section end -->
+<!-- Customer Section Start -->
+    <div class="container text-center p-5">
+        <h1>Customer's Testomonial</h1>
+        <button class="arrow1 rounded-circle bg-danger border p-3 text-white"><i
+                class="fa-solid fa-arrow-left p-1"></i></button>
+        <img src="images/client.jpg" alt="client" class="rounded-circle p-4 m-3" width="250">
+        <button class="arrow2 rounded-circle bg-danger border p-3 text-white"><i
+                class="fa-solid fa-arrow-right p-1"></i></button>
+        <h4 class="anna-trover m-0">Anna Trover</h4>
+        <p class="anna-customer m-0 fw-light">Customer</p>
+        <p class="customer-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati aliquid maiores
+            veritatis, quisquam atque sunt delectus eos consectetur deserunt possimus, iure harum ut doloremque.</p>
+    </div>
+    <!-- Customer Section End -->
 
     <!-- Subscribe section start -->
 
